k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: churn
  labels:
    name: churn
    project: churn-mlops
